('GSM' is Greg Sabino Mullane, greg@turnstep.com)

2.5.2 Released April, 2008

	- Make pg_notifies a true function, so that you can now
		use $dbh->pg_notifies instead of $dbh->func('pg_notifies') [GSM]
	- Fix minor build issue with Strawberry Perl [GSM]
	- Various performance improvements [GSM]

2.5.1 Released April 7, 2008 (subversion r11056)

	- Correctly handle negative PID numbers on Win32 systems when
		generating prepared statement names (CPAN bug # 34738) [GSM]

2.5.0 Released March 23, 2008 (subversion r10990)

	- Add pg_enum_values to $dbh->column_info()
		[Dave Rolsky] (CPAN ticket #34351)
	- Minor test fixes.

2.4.0 Released March 21, 2008 (subversion r10974)

	- Remove problematic and unneeded Test::Warn test from 00basic.t.
	- Add $sth->{pg_current_row} [GSM]

2.3.0 Released March 19, 2008 (subversion r10951)

	- Add $sth->{pg_bound} and $sth->{pg_numbound} [GSM]
	- Fix broken call to $sth->{pg_segments} [GSM]

2.2.2 Released March 3, 2008 (subversion r10873)

	- Remove non-working tracing from types.c and quote.c

	- Add parse_trace_flag as statement handle method.

2.2.1 Released March 1, 2008 (subversion r10865)

	- Fix memory leaks in dbdimp.c (CPAN bug #33743)
		[Alexey Tourbin]
	- Fix strlen problems in dbdimp.c (CPAN bug #33737)
		[Alexey Tourbin]
	- Fix char count in Renew() (CPAN bug #33738)
		[Alexey Tourbin]
	- Change local trace_flags to lowercase.

2.2.0 Released February 27, 2008 (subversion r10849)

	- Introduce enhanced trace flags. See the documentation 
		 on parse_trace_flags() for details. [GSM]
	- Remove version.pm dependency from Makefile.PL
		(CPAN bug #33429)

2.1.3 Released February 20, 2008 (subversion r10813)

	- Do not assume POSTGRES_LIB is a plain dirname, as it may have " -lssl".

2.1.2 Released February 19, 2008 (subversion r10806)

	- Do not build if environment variables POSTGRES_HOME, POSTGRES_LIB, 
		or POSTGRES_INCLUDE are set but not valid.
	- Fix dependency requirements, especially version.pm
